--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,7 +2,7 @@ body,
 html {
     margin: 0;
     padding: 0;
-    background-color: rgb(54, 54, 54);
+    background-color: rgb(22, 22, 22);
 }
 
 
@@ -24,6 +24,7 @@ html {
         justify-content: center;
         box-shadow: inset 0 0 3px 1px #fff;
         filter: drop-shadow(12px 19px 16px #000000);
+        animation: anim 500ms ease-in-out forwards;
 
         .notch {
             position: absolute;
@@ -109,6 +110,7 @@ html {
 
         .iphone_border {
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             background-color: rgb(255, 255, 255);
@@ -123,6 +125,15 @@ html {
             z-index: 30;
             position: relative;
 
+            .status_bar{
+                position: absolute;
+                top: 3px;
+                width: 100%;
+
+                img{
+                    width: 100%;
+                }
+            }
 
             .doc {
                 position: absolute;
@@ -174,5 +185,18 @@ html {
                 }
             }
         }
+    }
+}
+
+
+@keyframes anim {
+    from{
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translateY(0);
     }
 }
