--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "sf-pro";
+  src: url("../../src/assets/Fonts/SF-Pro.ttf") format("truetype");
+}
+@font-face {
+  font-family: "sf-italic";
+  src: url("../../src/assets/Fonts/SF-Pro-Italic.ttf") format("truetype");
+}
 body,
 html {
   margin: 0;
@@ -11,6 +19,8 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: "sf-pro";
+  color: white;
 }
 .container .iphone_mockup {
   position: relative;
@@ -166,6 +176,44 @@ html {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+.container .iphone_mockup .iphone_border .app_section {
+  width: 100%;
+  height: 85%;
+  display: flex;
+}
+.container .iphone_mockup .iphone_border .app_section a {
+  text-decoration: none;
+  color: white;
+}
+.container .iphone_mockup .iphone_border .app_section a:nth-child(1) .app {
+  background-image: url(../../src/assets/icons/hardware_trainging.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container .iphone_mockup .iphone_border .app_section a:nth-child(2) .app {
+  background-image: url(../../src/assets/icons/software_trainging_.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.container .iphone_mockup .iphone_border .app_section .app_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 10px;
+}
+.container .iphone_mockup .iphone_border .app_section .app_container .app {
+  width: 55px;
+  height: 55px;
+  background-color: black;
+  border-radius: 10px;
+}
+.container .iphone_mockup .iphone_border .app_section .app_container span {
+  text-align: center;
+  font-size: 10px;
 }
 
 @keyframes anim {
