--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'sf-pro';
+    src: url("../../src/assets/Fonts/SF-Pro.ttf") format('truetype');
+}
+
+@font-face {
+    font-family: 'sf-italic';
+    src: url("../../src/assets/Fonts/SF-Pro-Italic.ttf") format('truetype');
+}
+
 body,
 html {
     margin: 0;
@@ -12,6 +22,8 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: 'sf-pro';
+    color: white;
 
     .iphone_mockup {
         position: relative;
@@ -181,6 +193,52 @@ html {
                         background-repeat: no-repeat;
                         background-position: center;
                         background-size: cover;
+                    }
+                }
+            }
+
+            .app_section{
+                width: 100%;
+                height: 85%;
+                display: flex;
+                a{
+                    text-decoration: none;
+                    color: white;
+
+                    &:nth-child(1){
+                        .app{
+                            background-image: url(../../src/assets/icons/hardware_trainging.jpg);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                        }
+                    }
+                    &:nth-child(2){
+                        .app{
+                            background-image: url(../../src/assets/icons/software_trainging_.jpg);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                        }
+                    }
+                }
+                
+                .app_container{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+                    margin: 10px;
+
+                    .app{
+                        width: 55px;
+                        height: 55px;
+                        background-color: black;
+                        border-radius: 10px;
+                    }
+                    span{
+                        text-align: center;
+                        font-size: 10px;
                     }
                 }
             }
