--- a/public/css/index.css
+++ b/public/css/index.css
@@ -103,11 +103,16 @@ html {
   position: absolute;
   z-index: 50;
   bottom: 20px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   width: 40%;
   height: 4px;
   border-radius: 20px;
   display: none;
+  mix-blend-mode: difference;
+  cursor: pointer;
+}
+.container .iphone_mockup .nav_pill.open {
+  display: block;
 }
 .container .iphone_mockup .iphone_border {
   display: flex;
@@ -125,6 +130,7 @@ html {
   border: 8px solid black;
   z-index: 30;
   position: relative;
+  overflow: hidden;
 }
 .container .iphone_mockup .iphone_border .status_bar {
   position: absolute;
@@ -182,41 +188,129 @@ html {
   height: 85%;
   display: flex;
 }
-.container .iphone_mockup .iphone_border .app_section a {
-  text-decoration: none;
-  color: white;
+.container .iphone_mockup .iphone_border .app_section .app_container {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
 }
-.container .iphone_mockup .iphone_border .app_section a:nth-child(1) .app {
+.container .iphone_mockup .iphone_border .app_section .app_container:nth-child(1) .app {
   background-image: url(../../src/assets/icons/hardware_trainging.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-.container .iphone_mockup .iphone_border .app_section a:nth-child(2) .app {
+.container .iphone_mockup .iphone_border .app_section .app_container:nth-child(2) .app {
   background-image: url(../../src/assets/icons/software_trainging_.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.container .iphone_mockup .iphone_border .app_section .app_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin: 10px;
 }
 .container .iphone_mockup .iphone_border .app_section .app_container .app {
   width: 55px;
   height: 55px;
   background-color: black;
   border-radius: 10px;
+  cursor: pointer;
 }
 .container .iphone_mockup .iphone_border .app_section .app_container span {
   text-align: center;
   font-size: 10px;
 }
+.container .iphone_mockup .iphone_border .open_app_section {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: none;
+  background-color: white;
+  animation: anim 300ms ease-in-out forwards;
+}
+.container .iphone_mockup .iphone_border .open_app_section.open {
+  display: block;
+}
+.container .iphone_mockup .iphone_border .open_app_section.close {
+  display: none;
+}
+.container .iphone_mockup .iphone_border .open_app_section .open_status {
+  position: fixed;
+  top: 3px;
+  width: 100%;
+}
+.container .iphone_mockup .iphone_border .open_app_section .open_status img {
+  width: 100%;
+}
+.container .iphone_mockup .iphone_border .open_app_section .software_training {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: black;
+  width: 100%;
+  margin-top: 60px;
+  display: none;
+}
+.container .iphone_mockup .iphone_border .open_app_section .software_training.open {
+  display: flex;
+}
+.container .iphone_mockup .iphone_border .open_app_section .software_training .st_icon {
+  width: 150px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.container .iphone_mockup .iphone_border .open_app_section .software_training .st_icon img {
+  width: 100%;
+}
+.container .iphone_mockup .iphone_border .open_app_section .software_training .course_content {
+  margin-top: 30px;
+}
+.container .iphone_mockup .iphone_border .open_app_section .software_training .course_content ul {
+  margin: 0;
+}
+.container .iphone_mockup .iphone_border .open_app_section .software_training .course_content ul li::marker {
+  color: #673bb7;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training {
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: black;
+  width: 100%;
+  margin-top: 60px;
+  display: none;
+  overflow: auto;
+  max-height: calc(100vh - 60px);
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training.open {
+  display: flex;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training .st_icon {
+  width: 150px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training .st_icon img {
+  width: 100%;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training .course_content {
+  margin-top: 30px;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training .course_content ul {
+  margin: 0;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training .course_content ul li::marker {
+  color: #673bb7;
+}
 
 @keyframes anim {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes pop_up {
   from {
     opacity: 0;
     transform: translateY(30px);
