--- a/public/css/index.css
+++ b/public/css/index.css
@@ -238,18 +238,35 @@ html {
 .container .iphone_mockup .iphone_border .open_app_section .open_status img {
   width: 100%;
 }
-.container .iphone_mockup .iphone_border .open_app_section .software_training {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  color: black;
+.container .iphone_mockup .iphone_border .open_app_section .software_training,
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training {
   width: 100%;
+  height: 100%;
+  overflow-y: auto;
   margin-top: 60px;
   display: none;
+  color: black;
 }
-.container .iphone_mockup .iphone_border .open_app_section .software_training.open {
-  display: flex;
+.container .iphone_mockup .iphone_border .open_app_section .software_training.open,
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training.open {
+  display: block;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training .st_icon {
+  width: 90px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training .st_icon img {
+  width: 100%;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training .course_content {
+  margin-top: 30px;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training .course_content ul {
+  margin: 0;
+}
+.container .iphone_mockup .iphone_border .open_app_section .hardware_training .course_content ul li::marker {
+  color: #673bb7;
 }
 .container .iphone_mockup .iphone_border .open_app_section .software_training .st_icon {
   width: 150px;
@@ -265,38 +282,10 @@ html {
 .container .iphone_mockup .iphone_border .open_app_section .software_training .course_content ul {
   margin: 0;
 }
-.container .iphone_mockup .iphone_border .open_app_section .software_training .course_content ul li::marker {
-  color: #673bb7;
-}
-.container .iphone_mockup .iphone_border .open_app_section .hardware_training {
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+.container .iphone_mockup .iphone_border .open_app_section .software_training .course_content ul li {
   color: black;
-  width: 100%;
-  margin-top: 60px;
-  display: none;
-  overflow: auto;
-  max-height: calc(100vh - 60px);
 }
-.container .iphone_mockup .iphone_border .open_app_section .hardware_training.open {
-  display: flex;
-}
-.container .iphone_mockup .iphone_border .open_app_section .hardware_training .st_icon {
-  width: 150px;
-  border-radius: 10px;
-  overflow: hidden;
-}
-.container .iphone_mockup .iphone_border .open_app_section .hardware_training .st_icon img {
-  width: 100%;
-}
-.container .iphone_mockup .iphone_border .open_app_section .hardware_training .course_content {
-  margin-top: 30px;
-}
-.container .iphone_mockup .iphone_border .open_app_section .hardware_training .course_content ul {
-  margin: 0;
-}
-.container .iphone_mockup .iphone_border .open_app_section .hardware_training .course_content ul li::marker {
+.container .iphone_mockup .iphone_border .open_app_section .software_training .course_content ul li::marker {
   color: #673bb7;
 }
 
