--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -156,7 +156,6 @@ html {
 
             .doc {
                 position: absolute;
-
                 bottom: 10px;
                 display: flex;
                 flex-direction: row;
@@ -261,7 +260,6 @@ html {
                     display: none;
                 }
 
-
                 .open_status{
                     position: fixed;
                     top: 03px;
@@ -272,36 +270,39 @@ html {
                     }
                 }
 
-                .software_training{
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    flex-direction: column;
-                    color: black;
+                .software_training,
+                .hardware_training {
                     width: 100%;
+                    height: 100%;
+                    overflow-y: auto;
                     margin-top: 60px;
                     display: none;
-                    &.open{
-                        display: flex;
-                    }
+                    color: black;
+                }
 
-                    .st_icon{
-                        width: 150px;
+                .software_training.open,
+                .hardware_training.open {
+                    display: block;
+                }
+
+                .hardware_training {
+                    .st_icon {
+                        width: 90px;
                         border-radius: 10px;
                         overflow: hidden;
 
-                        img{
+                        img {
                             width: 100%;
                         }
                     }
 
-                    .course_content{
+                    .course_content {
                         margin-top: 30px;
-                        ul{
+                        ul {
                             margin: 0;
 
-                            li{
-                                &::marker{
+                            li {
+                                &::marker {
                                     color: #673bb7;
                                 }
                             }
@@ -309,37 +310,25 @@ html {
                     }
                 }
 
-                .hardware_training{
-                    align-items: center;
-                    justify-content: center;
-                    flex-direction: column;
-                    color: black;
-                    width: 100%;
-                    margin-top: 60px;
-                    display: none;
-                    overflow: auto;
-                    max-height: calc(100vh - 60px);
-                    &.open{
-                        display: flex;
-                    }
-
-                    .st_icon{
+                .software_training {
+                    .st_icon {
                         width: 150px;
                         border-radius: 10px;
                         overflow: hidden;
 
-                        img{
+                        img {
                             width: 100%;
                         }
                     }
 
-                    .course_content{
+                    .course_content {
                         margin-top: 30px;
-                        ul{
+                        ul {
                             margin: 0;
 
-                            li{
-                                &::marker{
+                            li {
+                                color: black;
+                                &::marker {
                                     color: #673bb7;
                                 }
                             }
