--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -209,6 +209,7 @@ html {
                 display: flex;
                 
                 .app_container{
+                    height: 80px;
                     display: flex;
                     flex-direction: column;
                     margin: 10px;
@@ -287,6 +288,7 @@ html {
 
                 .hardware_training {
                     .st_icon {
+                        margin-left: 102px;
                         width: 90px;
                         border-radius: 10px;
                         overflow: hidden;
@@ -312,6 +314,7 @@ html {
 
                 .software_training {
                     .st_icon {
+                        margin-left: 60px;
                         width: 150px;
                         border-radius: 10px;
                         overflow: hidden;
