--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -24,6 +24,7 @@ html {
     justify-content: center;
     font-family: 'sf-pro';
     color: white;
+    transition: all .3s ease-in-out;
 
     .iphone_mockup {
         position: relative;
@@ -38,6 +39,11 @@ html {
         filter: drop-shadow(12px 19px 16px #000000);
         animation: anim 500ms ease-in-out forwards;
 
+        @media(min-width:769px){
+            width: 640px;
+            height: 320px;
+        }
+
         .notch {
             position: absolute;
             display: flex;
@@ -50,6 +56,12 @@ html {
             top: 18px;
             border-radius: 50px;
             gap: 5px;
+
+            @media(min-width:769px){
+                right: -24px;
+                transform: rotate(90deg);
+                top: 140px;
+            }
 
             .speaker {
                 width: 40px;
@@ -81,6 +93,12 @@ html {
             height: 80px;
             background: linear-gradient(90deg, transparent, #99840a);
             border-radius: 10px 20px 20px 10px;
+
+            @media(min-width: 769px){
+                transform: rotate(90deg);
+                right: 248px;
+                top: 281px;
+            }
         }
 
         .volume_btn {
@@ -93,6 +111,13 @@ html {
             justify-content: center;
             gap: 10px;
             flex-direction: column;
+            @media(min-width: 769px){
+                transform: rotate(90deg);
+                left: 434px;
+                top: -51px;
+            }
+
+
 
             .up {
                 width: 3px;
@@ -144,10 +169,22 @@ html {
             position: relative;
             overflow: hidden;
 
+            @media(min-width:769px){
+                width: 615px;
+                height: 295px;
+            }
+
             .status_bar{
                 position: absolute;
                 top: 3px;
                 width: 100%;
+
+                @media(min-width:769px){
+                    width: 325px;
+                    transform: rotate(90deg);
+                    top: 120px;
+                    right: -139px;
+                }
 
                 img{
                     width: 100%;
