--- a/public/css/index.css
+++ b/public/css/index.css
@@ -193,30 +193,30 @@ html {
   background-color: rgba(255, 255, 255, 0.3);
   gap: 10px;
 }
-.container .iphone_mockup .iphone_border .doc .app {
+.container .iphone_mockup .iphone_border .doc a .app {
   width: 55px;
   height: 55px;
   border-radius: 10px;
 }
-.container .iphone_mockup .iphone_border .doc .app:nth-child(1) {
+.container .iphone_mockup .iphone_border .doc a:nth-child(1) .app {
   background-image: url(../../src/assets/icons/phone.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
-.container .iphone_mockup .iphone_border .doc .app:nth-child(2) {
+.container .iphone_mockup .iphone_border .doc a:nth-child(2) .app {
   background-image: url(../../src/assets/icons/safari.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
-.container .iphone_mockup .iphone_border .doc .app:nth-child(3) {
+.container .iphone_mockup .iphone_border .doc a:nth-child(3) .app {
   background-image: url(../../src/assets/icons/whatsapp.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
-.container .iphone_mockup .iphone_border .doc .app:nth-child(4) {
+.container .iphone_mockup .iphone_border .doc a:nth-child(4) .app {
   background-image: url(../../src/assets/icons/facebook.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -290,7 +290,6 @@ html {
   width: 100%;
   height: 100%;
   overflow-y: auto;
-  margin-top: 60px;
   display: none;
   color: black;
 }
@@ -300,6 +299,7 @@ html {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background: linear-gradient(180deg, rgb(113, 97, 239) 0%, rgb(149, 127, 239) 100%);
 }
 @media (min-width: 769px) {
   .container .iphone_mockup .iphone_border .open_app_section .software_training.open,
@@ -308,6 +308,7 @@ html {
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    gap: 90px;
   }
 }
 .container .iphone_mockup .iphone_border .open_app_section .hardware_training .st_icon {
