--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -207,39 +207,51 @@ html {
                 background-color: rgba(255, 255, 255, 0.3);
                 gap: 10px;
 
-                .app {
-                    width: 55px;
-                    height: 55px;
-                    border-radius: 10px;
+                a{
 
+                    .app {
+                        width: 55px;
+                        height: 55px;
+                        border-radius: 10px;
+                    }
                     &:nth-child(1) {
-                        background-image: url(../../src/assets/icons/phone.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: cover;
+                        .app{
+                            background-image: url(../../src/assets/icons/phone.png);
+                            background-repeat: no-repeat;
+                            background-position: center;
+                            background-size: cover;
+                        }
                     }
 
                     &:nth-child(2) {
-                        background-image: url(../../src/assets/icons/safari.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: cover;
+                        .app{
+                            background-image: url(../../src/assets/icons/safari.png);
+                            background-repeat: no-repeat;
+                            background-position: center;
+                            background-size: cover;
+                        }
                     }
 
                     &:nth-child(3) {
-                        background-image: url(../../src/assets/icons/whatsapp.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: cover;
+                        .app{
+                            background-image: url(../../src/assets/icons/whatsapp.png);
+                            background-repeat: no-repeat;
+                            background-position: center;
+                            background-size: cover;
+                        }
                     }
 
                     &:nth-child(4) {
-                        background-image: url(../../src/assets/icons/facebook.png);
-                        background-repeat: no-repeat;
-                        background-position: center;
-                        background-size: cover;
+                        .app{
+                            background-image: url(../../src/assets/icons/facebook.png);
+                            background-repeat: no-repeat;
+                            background-position: center;
+                            background-size: cover;
+                        }
                     }
                 }
+
+                
             }
 
             .app_section{
@@ -321,7 +333,7 @@ html {
                     width: 100%;
                     height: 100%;
                     overflow-y: auto;
-                    margin-top: 60px;
+                    // margin-top: 60px;
                     display: none;
                     color: black;
                 }
@@ -333,12 +345,14 @@ html {
                         align-items: center;
                         justify-content: center;
                         flex-direction: column;
+                        background: linear-gradient(180deg, rgba(113,97,239,1) 0%, rgba(149,127,239,1) 100%);
 
                     @media(min-width:769px){
                         display: flex;
                         align-items: center;
                         justify-content: center;
                         flex-direction: row;
+                        gap: 90px;
                         // flex-direction: column;
                     }
                 }
