--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -115,7 +115,7 @@ html {
             flex-direction: column;
             @media(min-width: 769px){
                 transform: rotate(90deg);
-                left: 434px;
+                right: -720px;
                 top: -51px;
             }
 
@@ -145,7 +145,6 @@ html {
             height: 4px;
             border-radius: 20px;
             display: none;
-            mix-blend-mode: difference;
             cursor: pointer;
 
             &.open{
@@ -208,7 +207,6 @@ html {
                 gap: 10px;
 
                 a{
-
                     .app {
                         width: 55px;
                         height: 55px;
@@ -258,9 +256,14 @@ html {
                 width: 100%;
                 height: 85%;
                 display: flex;
+
+                @media(min-width:769px){
+                    width: 95%;
+                    gap: 40px;
+                }
                 
                 .app_container{
-                    height: 80px;
+                    height: 86px;
                     display: flex;
                     flex-direction: column;
                     margin: 10px;
@@ -290,8 +293,9 @@ html {
                         cursor: pointer;
                     }
                     span{
+                        margin-top: 5px;
                         text-align: center;
-                        font-size: 10px;
+                        font-size: 12px;
                     }
                 }
             }
@@ -370,6 +374,7 @@ html {
                         margin-top: 20px;
 
                         p{
+                            color: white;
                             font-size: 15px;
                             font-weight: 900;
                         }
@@ -385,6 +390,7 @@ html {
 
                         img {
                             width: 100%;
+                            border-radius: 45px;
                         }
                     }
 
@@ -413,8 +419,9 @@ html {
                             margin: 0;
 
                             li {
+                                color: white;
                                 &::marker {
-                                    color: #673bb7;
+                                    color: #ffffff;
                                 }
                             }
                         }
@@ -424,9 +431,15 @@ html {
                 .software_training {
                     .st_icon {
                         // margin-left: 60px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        flex-direction: column;
                         width: 150px;
                         border-radius: 10px;
                         overflow: hidden;
+                        gap: 20px;
+
 
                         p{
                             font-size: 15px;
@@ -438,6 +451,7 @@ html {
                             width: 230px;
 
                             p{
+                                color: white;
                                 font-size: 20px;
                                 font-weight: 900;
                             }
@@ -445,6 +459,7 @@ html {
 
                         img {
                             width: 100%;
+                            border-radius: 45px;
                         }
                     }
 
@@ -458,9 +473,9 @@ html {
                             }
 
                             li {
-                                color: black;
+                                color: rgb(255, 255, 255);
                                 &::marker {
-                                    color: #673bb7;
+                                    color: #ffffff;
                                 }
                             }
                         }
