--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -25,6 +25,7 @@ html {
     font-family: 'sf-pro';
     color: white;
     transition: all .3s ease-in-out;
+    overflow: hidden;
 
     .iphone_mockup {
         position: relative;
@@ -113,6 +114,7 @@ html {
             justify-content: center;
             gap: 10px;
             flex-direction: column;
+            
             @media(min-width: 769px){
                 transform: rotate(90deg);
                 right: -720px;
@@ -156,7 +158,7 @@ html {
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            // justify-content: center;
             background-color: rgb(255, 255, 255);
             width: 295px;
             height: 615px;
@@ -254,12 +256,17 @@ html {
 
             .app_section{
                 width: 100%;
-                height: 85%;
-                display: flex;
+                // height: 85%;
+                display: grid;
+                grid-template-columns: repeat(4,1fr);
+                margin-top: 45px;
 
                 @media(min-width:769px){
+                    display: flex;
+                    flex-wrap: wrap;
                     width: 95%;
                     gap: 40px;
+                    margin-top: 80px;
                 }
                 
                 .app_container{
@@ -267,6 +274,8 @@ html {
                     display: flex;
                     flex-direction: column;
                     margin: 10px;
+                    justify-content: center;
+                    align-items: center;
 
                     &:nth-child(1){
                         .app{
@@ -284,13 +293,66 @@ html {
                             background-size: cover;
                         }
                     }
+                    &:nth-child(3){
+                        .app{
+                            background-image: url(../../src/assets/icons/Multimeter.jpg);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                        }
+                    }
+                    &:nth-child(4){
+                        .app{
+                            background-image: url(../../src/assets/icons/BGAWorkStation.png);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                        }
+                    }
+                    &:nth-child(5){
+                        .app{
+                            background-image: url(../../src/assets/icons/cro.jpg);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                        }
+                    }
+                    &:nth-child(6){
+                        .app{
+                            background-image: url(../../src/assets/icons/DCPowerSupply.png);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                        }
+                    }
+                    &:nth-child(7){
+                        .app{
+                            background-image: url(../../src/assets/icons/SolderingIron.jpg);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                        }
+                    }
+                    &:nth-child(8){
+                        .app{
+                            background-image: url(../../src/assets/icons/SMDReworkStation.jpg);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                        }
+                    }
 
                     .app{
-                        width: 55px;
-                        height: 55px;
+                        width: 53px;
+                        height: 53px;
                         background-color: black;
                         border-radius: 10px;
                         cursor: pointer;
+
+                        @media(min-width: 769px){
+                            width: 55px;
+                            height: 55px;
+                        }
                     }
                     span{
                         margin-top: 5px;
@@ -390,7 +452,10 @@ html {
 
                         img {
                             width: 100%;
-                            border-radius: 45px;
+                            border-radius: 20px;
+                            @media(min-width: 769px){
+                                bord◘er-radius: 45px;
+                            }
                         }
                     }
 
@@ -442,6 +507,7 @@ html {
 
 
                         p{
+                            color: white;
                             font-size: 15px;
                             font-weight: 900;
                             margin: 0;
